service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: cloud-app-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: cloud-app
  type: NodePort
